deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curriculum-api
spec:
  selector:
    app: curriculum-api
  ports:
    - name: http
      port: 80
      targetPort: http
