deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curriculum-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.greboh.dev
      secretName: curriculum-api-tls
  rules:
    - host: api.greboh.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: curriculum-api
                port:
                  name: http
